--- a/HeadControl/app/src/main/res/layout-xlarge/fragment_clean.xml
+++ b/HeadControl/app/src/main/res/layout-xlarge/fragment_clean.xml
@@ -4,10 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tyre="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fadingEdge="none">
+
     <LinearLayout
         android:id="@+id/ll_Clean_Main"
         android:layout_width="match_parent"
@@ -17,77 +14,88 @@
         <LinearLayout
             android:id="@+id/ll_Clean_Top"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="90dp"
             android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="460dp"
-                android:layout_height="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:background="@color/right_title_background_color"
-                android:textColor="@color/white"
-                android:text="清洁配置信息"
-                android:textSize="12sp"
                 android:gravity="center"
-                />
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/right_title_background_color"
+                    android:textColor="@color/white"
+                    android:text="清洁配置信息"
+                    android:textSize="36sp"
+                    android:gravity="center"
+                    />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btn_Clean_Save"
-                android:layout_width="40dp"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/btn_save_background"
-                android:textColor="@color/white"
                 android:text="保存"
-                android:textSize="12sp"
-                android:gravity="center"
-                />
+                android:textColor="@color/white"
+                android:textSize="36sp"
+                android:gravity="center"/>
+
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_Clean_Bottom"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@mipmap/bg"
             android:orientation="vertical" >
 
             <LinearLayout
-                android:layout_width="485dp"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_margin="8dp"
+                android:layout_margin="10dp"
                 android:background="@mipmap/bg05"
                 android:orientation="vertical">
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="42dp"
+                    android:layout_height="50dp"
                     android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
                     android:gravity="center_vertical"
                     >
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="清洁时间设置"
-                        android:textSize="11sp"
+                        android:textSize="36sp"
                         android:textColor="@color/white"
                         />
                 </RelativeLayout>
                 <!--存放添加时间列表-->
                 <!--第一组时间-->
-                    <RelativeLayout
-                        android:layout_width="468dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginTop="26dp"
-                        android:gravity="center_vertical"
-                        android:background="@mipmap/kuang"
-                        >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="26dp"
+                    android:gravity="center_vertical"
+                    android:background="@mipmap/kuang">
                         <TextView
                             android:id="@+id/tv_Clean_Start_Hour1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="53dp"
+                            android:layout_marginLeft="233dp"
                             android:textColor="@color/white"
                             android:text="08"
-                            android:textSize="16sp"
+                            android:textSize="30sp"
+                            android:layout_marginTop="10dp"
                             />
                         <TextView
                             android:id="@+id/tv_Start1"
@@ -96,7 +104,8 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/white"
                             android:text=":"
-                            android:textSize="16sp"
+                            android:textSize="30sp"
+                            android:layout_marginTop="10dp"
                             />
                         <TextView
                             android:id="@+id/tv_Clean_Start_Minute1"
@@ -105,8 +114,8 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/white"
                             android:text="00"
-                            android:textSize="16sp"
-                            />
+                            android:textSize="30sp"
+                            android:layout_marginTop="10dp"/>
 
                         <TextView
                             android:id="@+id/tv_Clean_End_Hour1"
@@ -116,7 +125,8 @@
                             android:layout_marginLeft="22dp"
                             android:textColor="@color/white"
                             android:text="09"
-                            android:textSize="16sp"
+                            android:textSize="30sp"
+                            android:layout_marginTop="10dp"
                             />
                         <TextView
                             android:id="@+id/tv_End_maohao1"
@@ -125,7 +135,8 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/white"
                             android:text=":"
-                            android:textSize="16sp"
+                            android:textSize="30sp"
+                            android:layout_marginTop="10dp"
                             />
                         <TextView
                             android:id="@+id/tv_Clean_End_Minute1"
@@ -134,37 +145,40 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/white"
                             android:text="00"
-                            android:textSize="16sp"
+                            android:textSize="30sp"
+                            android:layout_marginTop="10dp"
                             />
 
                         <ImageView
                             android:id="@+id/iv_Clean_bianji1"
-                            android:layout_width="15dp"
-                            android:layout_height="17dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_toLeftOf="@+id/fl_FrameLayout"
                             android:src="@mipmap/bianji_no"
-                            android:layout_marginRight="10dp"
-                            android:paddingTop="5dp"
+                            android:layout_marginRight="24dp"
+                            android:layout_marginTop="10dp"
                             />
                         <FrameLayout
                             android:id="@+id/fl_FrameLayout"
-                            android:layout_width="38dp"
-                            android:layout_height="16dp"
+                            android:layout_width="60dp"
+                            android:layout_height="40dp"
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="13dp"
-                            android:paddingTop="5dp"
+                            android:layout_marginTop="10dp"
                             >
                             <ImageView
                             android:id="@+id/iv_Clean_Switch_Open"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@mipmap/kai"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="fitXY"
+                                android:src="@mipmap/kai"
                             />
                             <ImageView
                                 android:id="@+id/iv_Clean_Switch_Close"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:src="@mipmap/guang"
+                                android:scaleType="fitXY"
                                 android:visibility="gone"
                                 />
                         </FrameLayout>
@@ -172,88 +186,101 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="485dp"
-                android:layout_height="123dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_margin="10dp"
                 android:layout_gravity="center_vertical"
                 android:background="@mipmap/bg05"
                 android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="清洁类型"
-                    android:textSize="11sp"
-                    android:textColor="@color/white"
-                    android:paddingTop="9dp"
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
                     android:paddingLeft="8dp"
-                    />
+                    android:paddingRight="8dp"
+                    android:gravity="center_vertical"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="清洁类型"
+                        android:textSize="36sp"
+                        android:textColor="@color/white"
+                        />
+                </RelativeLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="500dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:orientation="horizontal"
-                    >
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
                     <FrameLayout
-                        android:layout_width="142dp"
-                        android:layout_height="80dp"
-                        android:layout_marginTop="9dp"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_margin="20dp"
                         android:background="@mipmap/xuanzebeijing_clean"
                         >
                         <ImageView
                             android:id="@+id/iv_Clean_yaguang_no"
-                            android:layout_width="130dp"
-                            android:layout_height="71dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
                             android:layout_gravity="center"
                             android:src="@mipmap/yaguang_no"/>
                         <ImageView
                             android:id="@+id/iv_Clean_yaguang_per"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
                             android:layout_gravity="center"
                             android:src="@mipmap/yaguang_per"
                             android:visibility="gone"/>
                     </FrameLayout>
 
                     <FrameLayout
-                        android:layout_width="142dp"
-                        android:layout_height="80dp"
-                       android:layout_marginLeft="16dp"
-                        android:layout_marginTop="9dp"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_margin="20dp"
                         android:background="@mipmap/xuanzebeijing_clean">
                         <ImageView
                             android:id="@+id/iv_Clean_biaozhun_no"
-                            android:layout_width="130dp"
-                            android:layout_height="71dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
                             android:layout_gravity="center"
                             android:src="@mipmap/biaozhun_no"/>
                         <ImageView
                             android:id="@+id/iv_Clean_biaozhun_per"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
                             android:layout_gravity="center"
                             android:src="@mipmap/biaozhun_per"
                             android:visibility="gone"/>
                     </FrameLayout>
 
                     <FrameLayout
-                        android:layout_width="142dp"
-                        android:layout_height="80dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="9dp"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_margin="20dp"
                         android:background="@mipmap/xuanzebeijing_clean">
                         <ImageView
                             android:id="@+id/iv_Clean_liangguang_no"
-                            android:layout_width="130dp"
-                            android:layout_height="71dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
                             android:layout_gravity="center"
                             android:src="@mipmap/liangguang_no"/>
                         <ImageView
                             android:id="@+id/iv_Clean_liangguang_per"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
                             android:layout_gravity="center"
                             android:src="@mipmap/liangguang_per"
                             android:visibility="gone"/>
@@ -279,5 +306,4 @@
             <!--</LinearLayout>-->
         </LinearLayout>
     </LinearLayout>
-</ScrollView>
 </LinearLayout>
