--- a/HeadControl/app/src/main/res/layout/fragment_battery.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_battery.xml
@@ -1,196 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fadingEdge="none">
-
-    <LinearLayout
-       android:id="@+id/ll_Battery_Main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
-
+        android:background="@mipmap/bg">
         <LinearLayout
-            android:id="@+id/ll_Battery_Top"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="460dp"
-                android:layout_height="match_parent"
-                android:background="@color/right_title_background_color"
-                android:textColor="@color/white"
-                android:text="电源配置信息"
-                android:textSize="12sp"
-                android:gravity="center"
-                />
-
-            <Button
-                android:id="@+id/btn_Battery_Save"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/btn_save_background"
-                android:text="保存"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:gravity="center"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_Battery_Bottom"
+            android:id="@+id/ll_Battery_Main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/bg"
-            android:orientation="vertical">
-
-
+            android:orientation="vertical" >
             <LinearLayout
+                android:id="@+id/ll_Battery_Top"
                 android:layout_width="match_parent"
-                android:layout_height="148dp"
-                android:background="@mipmap/bg02"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
-                android:gravity="center"
-               >
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center">
-                    <ImageView
-                        android:id="@+id/iv_Battery_Power"
-                        android:layout_width="223dp"
-                        android:layout_height="86dp"
-                        android:src="@mipmap/power10"
-                        />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center"
-                        android:paddingLeft="8dp">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="电量还剩"
-                            android:textColor="@color/white"
-                            android:textSize="9sp"
-                            />
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-                            <TextView
-                                android:id="@+id/tv_Battery_Level"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/white"
-                                android:textSize="17sp"
-                                android:paddingTop="5dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="%"
-                                android:textColor="@color/white"
-                                android:textSize="17sp"
-                                android:paddingTop="5dp"/>
-                        </LinearLayout>
+                android:layout_height="90dp"
+                android:orientation="horizontal">
 
-                    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:background="@color/right_title_background_color"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:text="电源配置信息"
+                        android:textSize="36sp"
+                        android:gravity="center" />
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/btn_Battery_Save"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/btn_save_background"
+                    android:text="保存"
+                    android:textColor="@color/white"
+                    android:textSize="36sp"
+                    android:gravity="center" />
+
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="485dp"
-                android:layout_height="148dp"
-                android:background="@mipmap/bg03"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
+                android:id="@+id/ll_Battery_Bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <RelativeLayout
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="32dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:paddingTop="8dp"
-                    >
-                    <TextView
-                        android:id="@+id/tv_Battery_Setting"
-                        android:layout_width="wrap_content"
-                        android:layout_height="42dp"
-                        android:text="电源警告设置"
-                        android:textSize="11sp"
-                        android:textColor="@color/white"
-                        />
-                    <TextView
-                        android:id="@+id/tv_Battery_Warn"
-                        android:layout_toRightOf="@+id/tv_Battery_Setting"
+                    android:layout_height="450dp"
+                    android:background="@mipmap/bg02"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginRight="24dp"
+                    android:gravity="center">
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="11sp"
-                        android:paddingLeft="14dp"
-                        android:textColor="@color/white"
-                        />
-                    <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        >
+                        android:orientation="horizontal"
+                        android:gravity="center">
+                        <!--android:layout_width="300dp"
+                            android:layout_height="100dp" -->
                         <ImageView
-                            android:id="@+id/iv_Battery_Switch_Open"
+                            android:id="@+id/iv_Battery_Power"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@mipmap/kai"
-
+                            android:src="@mipmap/power10"
                             />
-                        <ImageView
-                            android:id="@+id/iv_Battery_Switch_Close"
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:gravity="center"
+                            android:paddingLeft="8dp">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="电量还剩"
+                                android:textColor="@color/white"
+                                android:textSize="29sp"
+                                />
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/tv_Battery_Level"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/white"
+                                    android:textSize="51sp"
+                                    android:paddingTop="5dp"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="%"
+                                    android:textColor="@color/white"
+                                    android:textSize="51sp"
+                                    android:paddingTop="5dp"/>
+                            </LinearLayout>
+
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:background="@mipmap/bg03"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginRight="24dp"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
+                        android:paddingLeft="24px"
+                        android:paddingRight="24px"
+                        android:paddingTop="24px">
+                        <TextView
+                            android:id="@+id/tv_Battery_Setting"
+                            android:layout_width="wrap_content"
+                            android:layout_height="42dp"
+                            android:text="电源警告设置"
+                            android:textSize="33sp"
+                            android:textColor="@color/white"
+                            />
+                        <TextView
+                            android:id="@+id/tv_Battery_Warn"
+                            android:layout_toRightOf="@+id/tv_Battery_Setting"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@mipmap/guang"
-                            android:visibility="gone"
+                            android:textSize="33sp"
+                            android:paddingLeft="24px"
+                            android:textColor="@color/white"
                             />
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true">
+                            <!--android:layout_width="100dp"
+                            android:layout_height="60dp" -->
+                            <ImageView
+                                android:id="@+id/iv_Battery_Switch_Open"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:scaleType="fitXY"
+                                android:src="@mipmap/kai"
+                                />
+                            <ImageView
+                                android:id="@+id/iv_Battery_Switch_Close"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:scaleType="fitXY"
+                                android:src="@mipmap/guan"
+                                android:visibility="gone"
+                                />
+                        </FrameLayout>
+                    </RelativeLayout>
 
-                    </FrameLayout>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    >
-                    <SeekBar
-                        android:id="@+id/sb_SeekBar"
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.SeekBar.Normal" />
-                </RelativeLayout>
+                        android:layout_marginLeft="10dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                   >
-                    <ImageView
+                        <SeekBar
+                            android:id="@+id/sb_SeekBar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/Widget.SeekBar.Normal" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@mipmap/kedujishiqi"/>
-                </RelativeLayout>
+                        android:paddingLeft="24px"
+                        android:paddingRight="24px">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:src="@mipmap/kedu"/>
+                    </RelativeLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
     </ScrollView>
 </LinearLayout>
