--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -90,6 +90,14 @@
             android:text="@string/button_plan"
             android:textColor="@color/black"
             />
+        <Button
+            android:id="@+id/button_remove"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textSize="25sp"
+            android:text="@string/button_remove"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/relative_plan_info"
