--- a/LaserRadar/HeadControl/app/src/main/res/values/colors.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/values/colors.xml
@@ -160,4 +160,6 @@
 
     <color name="title_dudutext_color">#E8E8E8</color>
     <color name="battery_power_text_color">#FFFFFF</color>
+
+    <color name="vifrification">#00000000</color>
 </resources>
